need to add photos, fix styling

--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+   <!--This is the title of my website--> 
     <h1>
-        Hello World
+        Mihir Walvekar's DS4200 Page
     </h1>
-    <p id="main">
-        This is blue.
+    <!--This is the bio--> 
+    <p id="bio">
+        I am  2nd year Computer Science and Psychology student. I have an interest in the conjunction between neuroscience and computer science.
     </p>
-    <p id="submain">
-        This is red.
+    <p id="photosText">
+        I would like to inclue two photos later
     </p>
-    <p class="A">
-        get an A in the class
-    </p>
-    
 
 </body>
 </html>
