--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <p id="photosText">
         I would like to inclue two photos later
     </p>
+    <p>
+        This is chill.
+    </p>
 
 </body>
 </html>
